--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,100 @@
+*{
+  font-family: Monaco, fantasy;
+}
+
 .App {
+  height: 100vh;
+  width: 100vw;
+  display: flex ;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App-Container{
   display: flex;
-  flex-direction: column;
+}
+
+.Note-Container{
+  padding: 5vw;
+  background-color: #000000;
+  width: 30vw;
+  height: 25vw;
+}
+
+.Link-Container{
+  border: 5px solid black;
+  background-color: #d9d9d9;
+  width: 20vw;
+}
+
+.Note-Header{
+  display: flex;
+  width: 100%;
+  height: 15%;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.Title{
+  padding: 0;
+  margin: 0 3% 0 0;
+  height: 100%;
+  width: 40%;
+  font-size: 3vw;
+
   color: white;
+  font-weight: 400;
 }
 
-.App-link {
-  color: #61dafb;
+.Title-Input{
+  height: 100%;
+  width: 60%;
+  outline: none;
+  font-size: 3vw;
+  font-weight: lighter;
+  text-indent: 1vw;
+  background-color: #d9d9d9;
+
+  padding: 0;
+  margin: 0;
+  border: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Note-Input-Container{
+  margin-top: 5%;
+  width: calc(100% - 20px);
+  height: calc(50% - 20px);
 }
+
+.Note-Input{
+  background-color: #d9d9d9;
+  height: 100%;
+  width: 100%;
+  font-weight: 100;
+  outline: none;
+  resize: none;
+
+  padding: 10px;
+  margin: 0;
+  border: none;
+}
+
+.Button-Container{
+  margin-top: 10%;
+  height: 15%;
+  width: 50%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.Custom-Button{
+  width: 45%;
+
+  font-size: 1.5vw;
+  font-weight: 100;
+  padding: 0;
+  margin: 0;
+  border: none;
+  background-color: #d9d9d9;
+}
+
