--- a/src/Components/Note.css
+++ b/src/Components/Note.css
@@ -66,7 +66,6 @@
 
 .Custom-Button{
     width: 45%;
-
     font-size: 1.5vw;
     font-weight: 100;
     padding: 0;
@@ -74,4 +73,9 @@
     border: none;
     background-color: #d9d9d9;
 }
+
+.Custom-Button:active{
+    background-color: #b6b6b6;
+}
+
 
